Correção de offset Z, macros, calibração extrusor.

--- a/extruder.cfg
+++ b/extruder.cfg
@@ -2,8 +2,8 @@
 step_pin:                   PD14
 dir_pin:                    !PD13
 enable_pin:                 !PD15
-rotation_distance:          21.0509246462 # Bondtech 5mm Drive Gears
-gear_ratio:                 50:10      # BMG Gear Ratio
+rotation_distance:          21.918        # Bondtech 5mm Drive Gears
+gear_ratio:                 50:10         # BMG Gear Ratio
 microsteps:                 32
 full_steps_per_rotation:    400
 nozzle_diameter:            0.400
