--- a/macros.cfg
+++ b/macros.cfg
@@ -7,7 +7,7 @@ variable_has_attachable_probe:      False
 
 variable_extruder_calibration_temp: 50
 
-variable_print_end_clean_delays:    25,12,12,15,15,20,0
+variable_print_end_clean_delays:    25,10,10,10,15,20
 
 variable_moving_macros_slow_fr:     2400    ; 40
 variable_moving_macros_fr:          4800    ; 80
@@ -20,19 +20,23 @@ variable_extrude_fr:                180     ; 3
 variable_extrude_fast_fr:           300     ; 5
 
 variable_safe_z_rise:               5
-variable_bucket_pos_x:              45
-variable_bucket_pos_y:              310
-variable_bucket_pos_z:              0.2
+variable_bucket_l_pos_x:            45
+variable_bucket_l_pos_y:            310
+variable_bucket_l_pos_z:            0.2
+variable_bucket_r_pos_x:            107
+variable_bucket_r_pos_y:            310
+variable_bucket_r_pos_z:            0.2
 
 variable_brush_pos_x:               58
 variable_brush_pos_y:               310
-variable_brush_pos_z:               2
+variable_brush_pos_z:               1.6
+variable_brush_width:               32
 
 gcode:
     ; Nothing
 
 #####################################################################
-#    Moving
+#    Position routines
 #####################################################################
 [gcode_macro _SAFE_Z]
 gcode:
@@ -127,12 +131,185 @@ gcode:
     G1 X{x_center} Y{y_center} Z{z_center} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro ENTER_IDLE]
+#####################################################################
+#    Cleanup routines
+#####################################################################
+
+[gcode_macro BUCKET_POSITION]
+description: Position the Nozzle in the cleaning position
 gcode:
-    M18
+    {% set RIGHT = params.RIGHT|default(0)|int %}
+
+    {% set g = printer["gcode_macro global"] %}
+    {% set th = printer.toolhead %}
+
+    {% if not "xyz" in th.homed_axes %}
+      { action_raise_error("Must Home X, Y and Z Axis First!") }
+    {% else %}
+        SAVE_GCODE_STATE NAME=bucket
+
+        G90
+        ; Only raise Z if not in position
+        {% if ( (not RIGHT and th.position.x != g.bucket_l_pos_x or th.position.y != g.bucket_l_pos_y) or 
+            (RIGHT and th.position.x != g.bucket_r_pos_x or th.position.y != g.bucket_r_pos_y) ) %}
+            _SAFE_Z
+        {% endif %}
+        {% if not RIGHT %}
+            G1 X{g.bucket_l_pos_x} Y{g.bucket_l_pos_y} F{g.moving_macros_fast_fr}
+            G1 Z{g.bucket_l_pos_z} F{g.moving_macros_fr}
+        {% else %}
+            G1 X{g.bucket_r_pos_x} Y{g.bucket_r_pos_y} F{g.moving_macros_fast_fr}
+            G1 Z{g.bucket_r_pos_z} F{g.moving_macros_fr}
+        {% endif %}
+
+        RESTORE_GCODE_STATE NAME=bucket
+    {% endif %}
+
+[gcode_macro CLEAN_NOZZLE]
+description: Clean the Nozzle in the bed brush
+gcode:
+    {% set RIGHT = params.RIGHT|default(0)|int %}
+
+    {% set g = printer["gcode_macro global"] %}
+    {% set b_width = g.brush_width %}
+    {% set b_segm = g.brush_width / 6 %}
+
+    {% if not "xyz" in printer.toolhead.homed_axes %}
+      { action_raise_error("Must Home X, Y and Z Axis First!") }
+    {% else %}
+        SAVE_GCODE_STATE NAME=clean
+
+        G90
+        _SAFE_Z
+        G1 X{g.brush_pos_x + (b_width if RIGHT else 0)} Y{g.brush_pos_y} F{g.moving_macros_fast_fr}
+        G1 Z{g.brush_pos_z} F{g.moving_macros_fr}
+
+        {% set side = 1 if RIGHT else -1 %}
+        {% set nside = -1 if RIGHT else 1 %}
+
+        G91
+        {% for _ in range(3) %}
+            G1 X{b_segm * nside}     Y-4 F{g.moving_macros_fr}
+            G1 X{b_segm * 2 * nside} Y4
+            G1 X{b_segm * 2 * nside} Y-4
+            G1 X{b_segm * nside}     Y4
+            G1 X{b_width * side}
+            G1 Y-1
+            G1 X{b_width * nside}
+            G1 Y1
+            G1 X{b_width * side}
+        {% endfor %}
+
+        _SAFE_Z
+
+        BUCKET_POSITION RIGHT={RIGHT}
+
+        RESTORE_GCODE_STATE NAME=clean
+    {% endif %}
+
+[gcode_macro PURGE_NOZZLE]
+gcode:
+    {% set g = printer["gcode_macro global"] %}
+
+    {% if not "xyz" in printer.toolhead.homed_axes %}
+      { action_raise_error("Must Home X, Y and Z Axis First!") }
+    {% else %}
+      {% if not printer.extruder.temperature >= 200 %}
+        { action_raise_error("Heat up nozzle first!") }
+      {% else %}
+        M117 Purging nozzle
+        STATUS_CLEANING
+
+        BUCKET_POSITION
+
+        SAVE_GCODE_STATE NAME=purge
+
+        ; Purge nozzle while moving Toolhead
+        M83
+        G92 E0
+        G90
+        G1 X{ range(3, 6) | random } E20 F{g.extrude_fr}
+        G1 Z0.2 F{g.moving_macros_fr}
+        G1 Y295 F{g.moving_macros_slow_fr}     ; Move nozzle to cut the purged filament
+        G1 Y270 F{g.moving_macros_fr}
+        G92 E0
+        M117
+        RESTORE_GCODE_STATE NAME=purge
+      {% endif %}
+    {% endif %}
 
 #####################################################################
-#    Homing, Gantry related
+#    Print routines
+#####################################################################
+
+[gcode_macro PRINT_START]
+gcode:
+    {% set BED = params.BED|default(100)|int %}
+    {% set EXTRUDER = params.EXTRUDER|default(240)|int %}
+    {% set CHAMBER = params.CHAMBER|default(60)|int %}
+    {% set Z_OFFSET = params.Z_OFFSET %}
+
+    {% if printer['output_pin chamberlight'].value <= 0 %}
+        CHAMBERLIGHT_25
+    {% endif %}
+
+    {% if not "xyz" in printer.toolhead.homed_axes or not printer.quad_gantry_level.applied %}
+        G32                         ; Get moving ready
+    {% endif %}
+
+    ; Apply Z offset after homing
+    {% if Z_OFFSET is defined %}
+        M117 Applying Z Offset
+        SET_GCODE_OFFSET Z={Z_OFFSET} MOVE=1
+    {% endif %}
+
+    M104 S{EXTRUDER}                ; Set temperatures
+    M140 S{BED}
+
+    BUCKET_POSITION RIGHT=0         ; Position the Toolhead in the nozzle cleaning position
+
+    M109 S{EXTRUDER}                ; Wait for temperatures
+    M190 S{BED}
+
+    PURGE_NOZZLE
+    CLEAN_NOZZLE RIGHT=0
+
+    STATUS_PRINTING
+
+[gcode_macro PRINT_END]
+gcode:
+    {% set g = printer["gcode_macro global"] %}
+
+    M400                                        ; wait for buffer to clear
+    SET_GCODE_OFFSET Z=0 MOVE=1                 ; reset Z offset
+    G91                                         ; relative positioning
+    G1 Z{g.safe_z_rise} F{g.moving_macros_fr}   ; move nozzle to remove stringing
+    G92 E0                                      ; zero the extruder
+    G1 E-10.0 F{g.retraction_fast_fr}           ; retract filament
+    M106 S0                                     ; Turn off fan
+    TURN_OFF_HEATERS
+
+    ; Clean nozzle on cooldown(Allow next print to start automatically, nozzle clean to home Z)
+    G90                                         ; absolute positioning
+    BUCKET_POSITION RIGHT=1                     ; position the nozzle in the bucket
+
+    M117 Cleaning extruder
+    {% for delay in g.print_end_clean_delays %}
+        BUCKET_POSITION RIGHT=1
+        G4 P{delay * 1000}
+        CLEAN_NOZZLE RIGHT=1
+    {% endfor %}
+    M117
+
+    TURN_OFF_HEATERS
+    M106 S0                             ; Turn off fan
+
+    BACK_RIGHT                         ; park nozzle at rear center
+    STATUS_OFF
+    CHAMBERLIGHT_OFF
+
+#####################################################################
+#    Calibration, Homing and Gantry related
 #####################################################################
 
 [gcode_macro SET_TEMP_CALIBRATION]
@@ -299,178 +476,8 @@ gcode:
     BED_MESH_PROFILE LOAD=default
 
 #####################################################################
-#    Print related
+#    Filament routines
 #####################################################################
-
-[gcode_macro PRINT_START]
-gcode:
-    {% set BED = params.BED|default(100)|int %}
-    {% set EXTRUDER = params.EXTRUDER|default(240)|int %}
-    {% set CHAMBER = params.CHAMBER|default(60)|int %}
-    {% set Z_OFFSET = params.Z_OFFSET %}
-
-    {% if printer['output_pin chamberlight'].value <= 0 %}
-        CHAMBERLIGHT_25
-    {% endif %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes or not printer.quad_gantry_level.applied %}
-        G32                         ; Get moving ready
-    {% endif %}
-
-    ; Apply Z offset after homing
-    {% if Z_OFFSET is defined %}
-        M117 Applying Z Offset
-        SET_GCODE_OFFSET Z={Z_OFFSET} MOVE=1
-    {% endif %}
-
-    M104 S{EXTRUDER}                ; Set temperatures
-    M140 S{BED}
-
-    BUCKET_POSITION                 ; Position the Toolhead in the nozzle cleaning position
-
-    M109 S{EXTRUDER}                ; Wait for temperatures
-    M190 S{BED}
-
-    PURGE_NOZZLE
-    CLEAN_NOZZLE
-
-    STATUS_PRINTING
-
-[gcode_macro PRINT_END]
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    M400                                        ; wait for buffer to clear
-    SET_GCODE_OFFSET Z=0 MOVE=1                 ; reset Z offset
-    G91                                         ; relative positioning
-    G1 Z{g.safe_z_rise} F{g.moving_macros_fr}   ; move nozzle to remove stringing
-    G92 E0                                      ; zero the extruder
-    G1 E-10.0 F{g.retraction_fast_fr}           ; retract filament
-    M106 S0                                     ; Turn off fan
-    TURN_OFF_HEATERS
-
-    ; Clean nozzle on cooldown(Allow next print to start automatically, nozzle clean to home Z)
-    G90                                  ; absolute positioning
-    BUCKET_POSITION                      ; position the nozzle in the bucket
-
-    M117 Cleaning extruder
-    {% for delay in g.print_end_clean_delays %}
-        BUCKET_POSITION
-        G4 P{delay * 1000}
-        CLEAN_NOZZLE
-    {% endfor %}
-    M117
-
-    TURN_OFF_HEATERS
-    M106 S0                             ; Turn off fan
-
-    BACK_CENTER                         ; park nozzle at rear center
-    STATUS_OFF
-    CHAMBERLIGHT_OFF
-
-[gcode_macro BUCKET_POSITION]
-description: Position the Nozzle in the cleaning position
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes %}
-      { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-        SAVE_GCODE_STATE NAME=bucket
-
-        G90
-        ; Only raise Z if not in position
-        {% if printer.toolhead.position.x != g.bucket_pos_x or printer.toolhead.position.y != g.bucket_pos_y %}
-            _SAFE_Z
-        {% endif %}
-        G1 X{g.bucket_pos_x} Y{g.bucket_pos_y} F{g.moving_macros_fast_fr}
-        G1 Z{g.bucket_pos_z} F{g.moving_macros_fr}
-        RESTORE_GCODE_STATE NAME=bucket
-    {% endif %}
-
-[gcode_macro CLEAN_NOZZLE]
-description: Clean the Nozzle in the bed brush
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes %}
-      { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-        SAVE_GCODE_STATE NAME=clean
-
-        G90
-        _SAFE_Z
-        G1 X{g.brush_pos_x} Y{g.brush_pos_y} F{g.moving_macros_fast_fr}
-        G1 Z{g.brush_pos_z}  F{g.moving_macros_fr}
-        G91
-
-        G1 X5.167  Y-4 F{g.moving_macros_fr}
-        G1 X10.333 Y4
-        G1 X10.333 Y-4
-        G1 X5.167  Y4
-        G1 X-31.0
-        G1 Y-1
-        G1 X31.0
-        G1 Y1
-        G1 X-31.0
-
-        G1 X5.167 Y-4
-        G1 X10.333 Y4
-        G1 X10.333 Y-4
-        G1 X5.167 Y4
-        G1 X-31.0
-        G1 Y-1
-        G1 X31.0
-        G1 Y1
-        G1 X-31.0
-
-        G1 X5.167  Y-4
-        G1 X10.333 Y4
-        G1 X10.333 Y-4
-        G1 X5.167  Y4
-        G1 X-31.0
-        G1 Y-1
-        G1 X31.0
-        G1 Y1
-        G1 X-31.0
-
-        _SAFE_Z
-
-        BUCKET_POSITION
-
-        RESTORE_GCODE_STATE NAME=clean
-    {% endif %}
-
-[gcode_macro PURGE_NOZZLE]
-gcode:
-    {% set g = printer["gcode_macro global"] %}
-
-    {% if not "xyz" in printer.toolhead.homed_axes %}
-      { action_raise_error("Must Home X, Y and Z Axis First!") }
-    {% else %}
-      {% if not printer.extruder.temperature >= 200 %}
-        { action_raise_error("Heat up nozzle first!") }
-      {% else %}
-        M117 Purging nozzle
-        STATUS_CLEANING
-
-        BUCKET_POSITION
-
-        SAVE_GCODE_STATE NAME=purge
-
-        ; Purge nozzle while moving Toolhead
-        M83
-        G92 E0
-        G90
-        G1 X{ range(3, 6) | random } E20 F{g.extrude_fr}
-        G1 Z0.2 F{g.moving_macros_fr}
-        G1 Y295 F{g.moving_macros_slow_fr}     ; Move nozzle to cut the purged filament
-        G1 Y270 F{g.moving_macros_fr}
-        G92 E0
-        M117
-        RESTORE_GCODE_STATE NAME=purge
-      {% endif %}
-    {% endif %}
 
 [gcode_macro UNLOAD_FILAMENT]
 gcode:
@@ -539,8 +546,12 @@ gcode:
     {% endif %}
 
 #####################################################################
-#    Overrides to add Status Leds
+#    General and Overrides
 #####################################################################
+
+[gcode_macro ENTER_IDLE]
+gcode:
+    M18
 
 [gcode_macro M84]
 rename_existing: M0084
