--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,2 +1,36 @@
 [main]
 theme = material-light
+print_estimate_method = slicer
+
+[preheat ABS]
+bed: 100
+extruder: 240
+gcode: BUCKET_POSITION
+
+[displayed_macros Printer]
+attach_probe = False
+bed_mesh_calibrate = False
+cancel_print = False
+dock_probe = False
+global = False
+m109 = False
+m18 = False
+m190 = False
+m84 = False
+pause = False
+print_end = False
+print_start = False
+probe_accuracy = False
+probe_calibrate = False
+quad_gantry_level = False
+resume = False
+set_temp_calibration = False
+status_busy = False
+status_calibrating_z = False
+status_cleaning = False
+status_heating = False
+status_homing = False
+status_leveling = False
+status_meshing = False
+status_printing = False
+status_ready = False
