--- a/macros.cfg
+++ b/macros.cfg
@@ -275,6 +275,7 @@ gcode:
     CLEAN_NOZZLE RIGHT=0
 
     STATUS_PRINTING
+    M117 Printing
 
 [gcode_macro PRINT_END]
 gcode:
@@ -580,3 +581,20 @@ rename_existing: M0190
 gcode:
     STATUS_HEATING
     M0190 { rawparams }
+
+# [display_data _default_16x4 printing_time]
+# position: 2, 10
+# text:
+#     {% set ptime = printer["gcode_macro M73"].r %}
+#     { "R%02d:%02d" % (ptime // 60, ptime % 60) }
+
+# [gcode_macro M73]
+# rename_existing: M773
+# variable_p: 0.0
+# variable_r: 0.0
+# default_parameter_P: 0.0
+# default_parameter_R: 0.0
+# gcode:
+#     M773 P{P}
+#     SET_GCODE_VARIABLE MACRO=M73 VARIABLE=p VALUE={P}
+#     SET_GCODE_VARIABLE MACRO=M73 VARIABLE=r VALUE={R}
