Melhorias nas macros.

--- a/macros.cfg
+++ b/macros.cfg
@@ -50,7 +50,7 @@ gcode:
         G1 Z{g.safe_z_rise} F{g.moving_macros_fr}
     {% endif %}
 
-[gcode_macro CENTER]
+[gcode_macro M_CENTER]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
     {% set posy = printer.toolhead.axis_maximum.y|float / 2.0 %}
@@ -60,7 +60,7 @@ gcode:
     G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro FRONT_LEFT]
+[gcode_macro M_FRONT_LEFT]
 gcode:
     {% set posx = printer.toolhead.axis_minimum.x|float + 15.0 %}
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
@@ -70,7 +70,7 @@ gcode:
     G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro FRONT_RIGHT]
+[gcode_macro M_FRONT_RIGHT]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float - 15.0 %}
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
@@ -80,7 +80,7 @@ gcode:
     G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro FRONT_CENTER]
+[gcode_macro M_FRONT_CENTER]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
     {% set posy = printer.toolhead.axis_minimum.y|float + 15.0 %}
@@ -90,7 +90,7 @@ gcode:
     G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro BACK_LEFT]
+[gcode_macro M_BACK_LEFT]
 gcode:
     {% set posx = printer.toolhead.axis_minimum.x|float + 15.0 %}
     {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
@@ -100,7 +100,7 @@ gcode:
     G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro BACK_RIGHT]
+[gcode_macro M_BACK_RIGHT]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float - 15.0 %}
     {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
@@ -110,7 +110,7 @@ gcode:
     G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro BACK_CENTER]
+[gcode_macro M_BACK_CENTER]
 gcode:
     {% set posx = printer.toolhead.axis_maximum.x|float / 2.0 %}
     {% set posy = printer.toolhead.axis_maximum.y|float - 15.0 %}
@@ -120,7 +120,7 @@ gcode:
     G1 X{posx} Y{posy} F{printer["gcode_macro global"].moving_macros_fast_fr}
     RESTORE_GCODE_STATE NAME=moving
 
-[gcode_macro CUBE_CENTER]
+[gcode_macro M_CUBE_CENTER]
 gcode:
     {% set x_center = printer.toolhead.axis_maximum.x|float / 2.0 %}
     {% set y_center = printer.toolhead.axis_maximum.y|float / 2.0 %}
@@ -305,7 +305,7 @@ gcode:
     TURN_OFF_HEATERS
     M106 S0                             ; Turn off fan
 
-    BACK_RIGHT                         ; park nozzle at rear center
+    M_BACK_RIGHT                        ; park nozzle at rear center
     STATUS_OFF
     CHAMBERLIGHT_OFF
 
@@ -313,7 +313,7 @@ gcode:
 #    Calibration, Homing and Gantry related
 #####################################################################
 
-[gcode_macro SET_TEMP_CALIBRATION]
+[gcode_macro SET_CALIBRATION_TEMP]
 gcode:
     {% set EXTRUDER = params.EXTRUDER %}
     {% set BED = params.BED %}
@@ -329,17 +329,16 @@ gcode:
     {% endif %}
 
     {% if BED is defined %}
-        ; Will round current bed temperature to tens place
-        {% set NEXT_BED_TEMP = ((printer.heater_bed.temperature|int // 10) + 1) * 10 %}
+        {% set NEXT_BED_TEMP = printer.heater_bed.temperature %}
         {% set BED_TEMP = 0 if BED == '0' else NEXT_BED_TEMP %}
 
-        M117 Setting temperature {MSG ~ ", " if MSG is defined else ""}Bed: {BED_TEMP}C
+        M117 Waiting temperature {MSG ~ ", " if MSG is defined else ""}Bed: {BED_TEMP}C settle...
 
         M190 S{BED_TEMP}
         
-        G4 P15000 ; Wait a little
+        G4 P60000 ; Wait 1min the temperature become stable
     {% else %}
-        M117 Setting temperature {MSG}
+        M117 Waiting temperature {MSG} settle...
     {% endif %}
 
     {% if EXTRUDER_TEMP is defined %}
@@ -353,24 +352,24 @@ gcode:
 
     STATUS_HOMING
 
-    SET_TEMP_CALIBRATION EXTRUDER=1
+    SET_CALIBRATION_TEMP EXTRUDER=1
 
     M117 Homing
     G0028 { rawparams }
 
-    SET_TEMP_CALIBRATION EXTRUDER=0
+    SET_CALIBRATION_TEMP EXTRUDER=0
 
     STATUS_READY
 
 [gcode_macro BED_MESH_CALIBRATE]
-rename_existing: __BED_MESH_CALIBRATE
+rename_existing: BED_MESH_CALIBRATE_
 description: Perform Mesh Bed Leveling with klicky automount
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
     STATUS_LEVELING
 
-    SET_TEMP_CALIBRATION BED=1
+    SET_CALIBRATION_TEMP BED=1
 
     {% if g.has_attachable_probe %}
         _CheckProbe action=query
@@ -378,7 +377,7 @@ gcode:
         Attach_Probe
     {% endif %}
 
-    __BED_MESH_CALIBRATE {% for p in params
+    BED_MESH_CALIBRATE_ {% for p in params
            %}{'%s=%s ' % (p, params[p])}{%
           endfor %}
 
@@ -386,19 +385,19 @@ gcode:
         Dock_Probe
     {% endif %}
 
-    SET_TEMP_CALIBRATION BED=0
+    SET_CALIBRATION_TEMP BED=0
 
     STATUS_READY
 
 [gcode_macro QUAD_GANTRY_LEVEL]
-rename_existing: __QUAD_GANTRY_LEVEL
+rename_existing: QUAD_GANTRY_LEVEL_
 description: Conform a moving, twistable gantry to the shape of a stationary bed with klicky automount
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
     STATUS_LEVELING
 
-    SET_TEMP_CALIBRATION BED=1
+    SET_CALIBRATION_TEMP BED=1
 
     {% if g.has_attachable_probe %}
         _CheckProbe action=query
@@ -406,7 +405,7 @@ gcode:
         Attach_Probe
     {% endif %}
 
-    __QUAD_GANTRY_LEVEL {% for p in params
+    QUAD_GANTRY_LEVEL_ {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
             endfor %}
 
@@ -414,12 +413,12 @@ gcode:
         Dock_Probe
     {% endif %}
 
-    SET_TEMP_CALIBRATION BED=0
+    SET_CALIBRATION_TEMP BED=0
 
     STATUS_READY
 
 [gcode_macro PROBE_ACCURACY]
-rename_existing: __PROBE_ACCURACY
+rename_existing: PROBE_ACCURACY_
 description:Probe Z-height accuracy at current XY position with klicky automount
 gcode:
     {% set g = printer["gcode_macro global"] %}
@@ -434,9 +433,9 @@ gcode:
         Attach_Probe
     {% endif %}
 
-    CENTER
+    M_CENTER
 
-    __PROBE_ACCURACY {% for p in params
+    PROBE_ACCURACY_ {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
             endfor %}
 
@@ -445,7 +444,7 @@ gcode:
     {% endif %}
 
 [gcode_macro PROBE_CALIBRATE]
-rename_existing: __PROBE_CALIBRATE
+rename_existing: PROBE_CALIBRATE_
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
@@ -456,9 +455,9 @@ gcode:
     {% if g.has_attachable_probe %}
         { action_raise_error("PROBE_CALIBRATE disabled with attachable probe!") }
     {% else %}
-        CENTER
+        M_CENTER
 
-        __PROBE_CALIBRATE {% for p in params
+        PROBE_CALIBRATE_ {% for p in params
                 %}{'%s=%s ' % (p, params[p])}{%
                 endfor %}
     {% endif %}
@@ -471,7 +470,7 @@ gcode:
 
     G28
                                         ; will not wait for the extruder to heat up
-    SET_TEMP_CALIBRATION EXTRUDER=1     ; Set the extruder temperature so the next G28
+    SET_CALIBRATION_TEMP EXTRUDER=1     ; Set the extruder temperature so the next G28
     QUAD_GANTRY_LEVEL
 
     G28
@@ -498,7 +497,7 @@ gcode:
 
             G90
             G1 Z110 F{g.moving_macros_fr}
-            FRONT_CENTER
+            M_FRONT_CENTER
 
             ; Extruder in relative mode
             M83
@@ -581,20 +580,3 @@ rename_existing: M0190
 gcode:
     STATUS_HEATING
     M0190 { rawparams }
-
-# [display_data _default_16x4 printing_time]
-# position: 2, 10
-# text:
-#     {% set ptime = printer["gcode_macro M73"].r %}
-#     { "R%02d:%02d" % (ptime // 60, ptime % 60) }
-
-# [gcode_macro M73]
-# rename_existing: M773
-# variable_p: 0.0
-# variable_r: 0.0
-# default_parameter_P: 0.0
-# default_parameter_R: 0.0
-# gcode:
-#     M773 P{P}
-#     SET_GCODE_VARIABLE MACRO=M73 VARIABLE=p VALUE={P}
-#     SET_GCODE_VARIABLE MACRO=M73 VARIABLE=r VALUE={R}
