Correções das medidas depois da modificação da mesa.

--- a/macros.cfg
+++ b/macros.cfg
@@ -21,16 +21,17 @@ variable_extrude_fast_fr:           300     ; 5
 
 variable_safe_z_rise:               5
 variable_bucket_l_pos_x:            45
-variable_bucket_l_pos_y:            310
+variable_bucket_l_pos_y:            307
 variable_bucket_l_pos_z:            0.2
 variable_bucket_r_pos_x:            107
-variable_bucket_r_pos_y:            310
+variable_bucket_r_pos_y:            307
 variable_bucket_r_pos_z:            0.2
 
-variable_brush_pos_x:               58
-variable_brush_pos_y:               310
+variable_brush_pos_x:               56
+variable_brush_pos_y:               307
 variable_brush_pos_z:               1.6
-variable_brush_width:               32
+variable_brush_width:               36
+variable_brush_depth:               8
 
 gcode:
     ; Nothing
@@ -172,6 +173,7 @@ gcode:
 
     {% set g = printer["gcode_macro global"] %}
     {% set b_width = g.brush_width %}
+    {% set b_depth = g.brush_depth %}
     {% set b_segm = g.brush_width / 6 %}
 
     {% if not "xyz" in printer.toolhead.homed_axes %}
@@ -189,14 +191,14 @@ gcode:
 
         G91
         {% for _ in range(3) %}
-            G1 X{b_segm * nside}     Y-4 F{g.moving_macros_fr}
-            G1 X{b_segm * 2 * nside} Y4
-            G1 X{b_segm * 2 * nside} Y-4
-            G1 X{b_segm * nside}     Y4
+            G1 X{b_segm * nside}     Y-{b_depth} F{g.moving_macros_fast_fr}
+            G1 X{b_segm * 2 * nside} Y{b_depth}
+            G1 X{b_segm * 2 * nside} Y-{b_depth}
+            G1 X{b_segm * nside}     Y{b_depth}
             G1 X{b_width * side}
-            G1 Y-1
+            G1 Y-{b_depth / 3.0}
             G1 X{b_width * nside}
-            G1 Y1
+            G1 Y{b_depth / 3.0}
             G1 X{b_width * side}
         {% endfor %}
 
@@ -323,8 +325,6 @@ gcode:
     {% if EXTRUDER is defined %}
         {% set EXTRUDER_TEMP = 0 if EXTRUDER == '0' else g.extruder_calibration_temp %}
 
-        {% set MSG = "Extruder: " ~ EXTRUDER_TEMP ~ "C" %}
-
         M104 S{EXTRUDER_TEMP}         ; Set extruder temperature
     {% endif %}
 
@@ -332,16 +332,25 @@ gcode:
         {% set NEXT_BED_TEMP = printer.heater_bed.temperature %}
         {% set BED_TEMP = 0 if BED == '0' else NEXT_BED_TEMP %}
 
-        M117 Waiting temperature {MSG ~ ", " if MSG is defined else ""}Bed: {BED_TEMP}C settle...
-
         M190 S{BED_TEMP}
-        
-        G4 P60000 ; Wait 1min the temperature become stable
-    {% else %}
-        M117 Waiting temperature {MSG} settle...
+
+        {% if BED_TEMP > 0 %}
+            ; Wait 1min the temperature become stable
+            M117 Waiting 60s Bed temperature to settle({BED_TEMP}C)...
+            G4 P15000
+            M117 Waiting 45s Bed temperature to settle({BED_TEMP}C)...
+            G4 P15000
+            M117 Waiting 30s Bed temperature to settle({BED_TEMP}C)...
+            G4 P15000
+            M117 Waiting 15s Bed temperature to settle({BED_TEMP}C)...
+            G4 P15000
+        {% endif %}
     {% endif %}
 
     {% if EXTRUDER_TEMP is defined %}
+        {% if EXTRUDER_TEMP > 0 %}
+            M117 Setting Extruder temperature: {EXTRUDER_TEMP}C...
+        {% endif %}
         M109 S{EXTRUDER_TEMP}    ; Wait for Extruder
     {% endif %}
 
@@ -359,6 +368,7 @@ gcode:
 
     SET_CALIBRATION_TEMP EXTRUDER=0
 
+    M117 Ready
     STATUS_READY
 
 [gcode_macro BED_MESH_CALIBRATE]
@@ -387,6 +397,7 @@ gcode:
 
     SET_CALIBRATION_TEMP BED=0
 
+    M117 Ready
     STATUS_READY
 
 [gcode_macro QUAD_GANTRY_LEVEL]
@@ -397,11 +408,16 @@ gcode:
 
     STATUS_LEVELING
 
+    ; Position probe near the bed so we try to get a stable temperature in the probe
+    G90
+    M_CENTER
+    G0 Z3.5
+
     SET_CALIBRATION_TEMP BED=1
 
+    M117 Quad Gantry Leveling
     {% if g.has_attachable_probe %}
         _CheckProbe action=query
-        G90
         Attach_Probe
     {% endif %}
 
@@ -415,6 +431,7 @@ gcode:
 
     SET_CALIBRATION_TEMP BED=0
 
+    M117 Ready
     STATUS_READY
 
 [gcode_macro PROBE_ACCURACY]
