--- a/printer.cfg
+++ b/printer.cfg
@@ -83,6 +83,20 @@ shutdown_speed:     1.0
 idle_speed:         0.4
 idle_timeout:       300   # 5 minutes
 
+# Chamber Thermistor
+[thermistor NTC_10K]
+temperature1: 25
+resistance1: 15000
+beta: 3960
+
+# Chamber Temperature Sensor
+[temperature_sensor chamber]
+sensor_type: NTC_10K
+sensor_pin:  PC0
+# min_temp:    10
+# max_temp:    110
+gcode_id: C
+
 # Raspberry Pi Core Temperature Sensor
 [temperature_sensor Host]
 sensor_type: temperature_host
