Adicionado mensagem de aguardando temperatura. Adicionado input shaper.

--- a/printer.cfg
+++ b/printer.cfg
@@ -162,6 +162,29 @@ algorithm: bicubic
 relative_reference_index: 12
 
 #####################################################################
+#    Resonance
+#####################################################################
+
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
+[adxl345]
+cs_pin: rpi:None
+axes_map: z, y, x
+
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    150, 140, 20
+
+[input_shaper]
+# Measured on 17/04/2022 - 11:55
+shaper_type_x = ei
+shaper_freq_x = 59.2
+shaper_type_y = ei
+shaper_freq_y = 58.0
+
+#####################################################################
 #    Macros
 #####################################################################
 
