--- a/macros.cfg
+++ b/macros.cfg
@@ -270,6 +270,8 @@ gcode:
 
     BUCKET_POSITION RIGHT=0         ; Position the Toolhead in the nozzle cleaning position
 
+    M117 Waiting reach temperature
+
     M109 S{EXTRUDER}                ; Wait for temperatures
     M190 S{BED}
 
