--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,15 +1,19 @@
 [main]
-theme = material-light
+theme = material-dark
 print_estimate_method = slicer
-titlebar_items: chamber
+screen_blanking = 900
 use_dpms = True
+
+[printer V2.3125]
+titlebar_items: chamber
+titlebar_name_type: short
 
 [preheat ABS]
 bed: 100
-extruder: 240
+extruder: 250
 gcode: BUCKET_POSITION
 
-[displayed_macros Printer]
+[displayed_macros V2.3125]
 attach_probe = False
 bed_mesh_calibrate = False
 cancel_print = False
