--- a/macros.cfg
+++ b/macros.cfg
@@ -181,6 +181,8 @@ gcode:
     {% else %}
         SAVE_GCODE_STATE NAME=clean
 
+        M117 Cleaning nozzle
+
         G90
         _SAFE_Z
         G1 X{g.brush_pos_x + (b_width if RIGHT else 0)} Y{g.brush_pos_y} F{g.moving_macros_fast_fr}
@@ -270,7 +272,7 @@ gcode:
 
     BUCKET_POSITION RIGHT=0         ; Position the Toolhead in the nozzle cleaning position
 
-    M117 Waiting reach temperature
+    M117 Waiting to reach temperature
 
     M109 S{EXTRUDER}                ; Wait for temperatures
     M190 S{BED}
@@ -304,12 +306,11 @@ gcode:
         G4 P{delay * 1000}
         CLEAN_NOZZLE RIGHT=1
     {% endfor %}
-    M117
+    M117 Print finished
 
     TURN_OFF_HEATERS
     M106 S0                             ; Turn off fan
 
-    M_BACK_RIGHT                        ; park nozzle at rear center
     STATUS_OFF
     CHAMBERLIGHT_OFF
 
@@ -389,6 +390,8 @@ gcode:
         Attach_Probe
     {% endif %}
 
+    M117 Bed mesh calibrating
+
     BED_MESH_CALIBRATE_ {% for p in params
            %}{'%s=%s ' % (p, params[p])}{%
           endfor %}
@@ -404,7 +407,7 @@ gcode:
 
 [gcode_macro QUAD_GANTRY_LEVEL]
 rename_existing: QUAD_GANTRY_LEVEL_
-description: Conform a moving, twistable gantry to the shape of a stationary bed with klicky automount
+description: Conform a moving, twistable gantry to the shape of a stationary bed with/without dockable probe
 gcode:
     {% set g = printer["gcode_macro global"] %}
 
@@ -422,6 +425,8 @@ gcode:
         _CheckProbe action=query
         Attach_Probe
     {% endif %}
+
+    M117 Quad gantry leveling
 
     QUAD_GANTRY_LEVEL_ {% for p in params
             %}{'%s=%s ' % (p, params[p])}{%
