--- a/printer.cfg
+++ b/printer.cfg
@@ -112,7 +112,7 @@ max_temp: 80
 #####################################################################
 
 [safe_z_home]
-home_xy_position:   207.8,303.5
+home_xy_position:   204.30,305.5
 speed:              50
 z_hop:              15
 
@@ -161,6 +161,14 @@ probe_count: 5,5
 algorithm: bicubic
 relative_reference_index: 12
 
+##--------------------------------------------------------------------
+
+[z_calibration]
+nozzle_xy_position: 204.30,305.5
+switch_xy_position: 202.8,283.5
+bed_xy_position:    150,150
+switch_offset:      0.1
+
 #####################################################################
 #    Resonance
 #####################################################################
@@ -179,10 +187,10 @@ probe_points:
 
 [input_shaper]
 # Measured on 17/04/2022 - 11:55
-shaper_type_x = ei
-shaper_freq_x = 59.2
-shaper_type_y = ei
-shaper_freq_y = 58.0
+shaper_type_x = 2hump_ei
+shaper_freq_x = 74.2
+shaper_type_y = 2hump_ei
+shaper_freq_y = 56.4
 
 #####################################################################
 #    Macros
