--- a/lights.cfg
+++ b/lights.cfg
@@ -94,7 +94,7 @@ gcode:
 
     {% for led_index in idx %}
         {% set transmit=transmit_last if loop.last else 0 %}
-        set_led led={led} red={red} green={green} blue={blue} white={white} index={led_index} transmit={transmit}
+        set_led led={led} red={red} green={green} blue={blue} white={white} index={led_index} transmit={transmit} sync=0
     {% endfor %}
 
 [gcode_macro _SET_SB_LEDS_BY_NAME]
