--- a/macros.cfg
+++ b/macros.cfg
@@ -314,6 +314,20 @@ gcode:
     STATUS_OFF
     CHAMBERLIGHT_OFF
 
+[gcode_macro SKIRT_START]
+variable_inside: False
+gcode:
+    SAVE_GCODE_STATE NAME=before_skirt
+    SET_GCODE_VARIABLE MACRO=SKIRT_START VARIABLE=inside VALUE=True
+    M220 S25
+
+[gcode_macro SKIRT_END]
+gcode:
+    {% if printer["gcode_macro SKIRT_START"].inside %}
+        RESTORE_GCODE_STATE NAME=before_skirt MOVE=0
+        SET_GCODE_VARIABLE MACRO=SKIRT_START VARIABLE=inside VALUE=False
+    {% endif %}
+
 #####################################################################
 #    Calibration, Homing and Gantry related
 #####################################################################
@@ -604,3 +618,21 @@ rename_existing: M0190
 gcode:
     STATUS_HEATING
     M0190 { rawparams }
+
+[gcode_macro M220]
+rename_existing: M00220
+gcode:
+    {% if params.S is defined %}
+        M00220 S {params.S}
+    {% else %}
+        M118 Speed factor {printer.gcode_move.speed_factor * 100}%
+    {% endif %}
+
+[gcode_macro M221]
+rename_existing: M00221
+gcode:
+    {% if params.S is defined %}
+        M00221 S {params.S}
+    {% else %}
+        M118 Extrude factor {printer.gcode_move.extrude_factor * 100}%
+    {% endif %}
