--- a/printer.cfg
+++ b/printer.cfg
@@ -29,6 +29,8 @@ gcode:
 [gcode_arcs]
 resolution: 0.05
 
+[respond]
+
 #####################################################################
 #   Motors
 #####################################################################
